# python-di

./: README.md  pyproject.toml  setup.py
src/complexcalculator/: __init__.py  multiplication.py
src/core/: __init__.py  addition.py  circumference.py  container.py  multiplication.py
src/simplecalculator/: __init__.py  addition.py
src/test_app/: __init__.py  __main__.py  main.py
